# X-RAY

./: .dockerignore  .gitignore  README.md  docker-compose.yml
client-macos/: README.md  project.yml
deploy/: .env.deploy.example  README.md  docker-compose.deploy.yml  docker-compose.gpu.yml  gpu-rebuild.sh  mlflow.Dockerfile
docs/: brainscan_annotation_mode.md  brainscan_metrics.md  brainscan_schema.sql
ml/: .dockerignore  .env.example  Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
ml/datasets/: builder.py
ml/tests/: test_weighted_training.py
ml/workers/: _internal_api.py  celery_app.py  gpu_autoscaler.py  maintenance.py  retrain_trigger.py  s3_io.py  train_common.py  train_localize.py  train_tumor.py  weighted_training.py
server/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_seed_admin.py  0003_mlops_pipeline.py  0004_fix_datasets_sizes_check.py  0005_gpu_instances.py  0006_allow_created_null_bbox.py  0007_correction_signals.py
server/app/: config.py  db.py  main.py
server/app/api/v1/: auth.py  deps.py  detect.py  detect_annotations.py  health.py  internal.py  localize_annotations.py  localize_images.py  models.py  screenshots.py  tumor_annotations.py
server/app/api/v1/admin/: __init__.py  datasets.py  gpu.py  models.py  training.py
server/app/auth/: jwt.py  service.py
server/app/core/: exceptions.py
server/app/models/: __init__.py  gpu.py  localize.py  mlops.py  screenshot.py  tumor.py  user.py
server/app/schemas/: admin.py  auth.py  common.py  deployment.py  detect.py  detect_annotations.py  localize.py  screenshot.py  training.py  tumor.py
server/app/services/: celery_client.py  corrections.py  crops.py  dataset_builder.py  dataset_pipeline.py  dataset_stats.py  gates.py  gpu_orchestrator.py  gpu_provider.py  inference.py  locks.py  maintenance.py  system_settings.py  training_lifecycle.py
server/app/storage/: __init__.py  s3.py
server/scripts/: migrate_s3_layout.py
server/tests/: conftest.py  test_admin_datasets_build.py  test_admin_datasets_builds.py  test_admin_datasets_check.py  test_admin_gpu.py  test_admin_models.py  test_admin_training_candidates.py  test_admin_training_mode.py  test_auth.py  test_corrections.py  test_dataset_builder_split.py  test_detect.py  test_detect_annotations.py  test_gpu_orchestrator.py  test_health.py  test_internal_endpoints.py  test_internal_training.py  test_localize_annotations.py  test_localize_images.py  test_models.py  test_screenshots.py  test_tumor_annotations.py
shared/: openapi.yaml
(+78 files in other folders)
