[project]
name = "brainscan-ml"
version = "0.1.0"
description = "BrainScan ML training workers and MLflow integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "redis>=5.2",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "boto3>=1.35",
    "mlflow>=2.18",
    # Cron-таски воркера дёргают /api/v1/internal/* на server'е (через docker
    # network), а не лезут в БД сами — переиспользуем server-side pipeline.
    "httpx>=0.27",
    # Реальные ML-зависимости появятся когда подключим первую модель:
    # "torch", "torchvision", "ultralytics" (YOLOv8), "opencv-python", "pillow"
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workers", "datasets"]
