[project]
name = "brainscan-server"
version = "0.1.0"
description = "BrainScan FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.12",
    "boto3>=1.35",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# RUF001/002/003: ambiguous Cyrillic vs Latin — комментарии и докстринги в репо
# намеренно на русском, ловить cyr/lat-смесь не нужно.
# B008: FastAPI идиома `Depends()` в дефолтных значениях параметров.
ignore = ["RUF001", "RUF002", "RUF003", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = false
disable_error_code = ["import-untyped"]
exclude = ["alembic/", "tests/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
